Update code indentation

--- a/docs/02_implement_function_calls/0202.md
+++ b/docs/02_implement_function_calls/0202.md
@@ -83,89 +83,95 @@ The key tasks are as follows:
 - The code for the `GetBookingsMissingHotelRooms()` method is in the `DatabaseService` class as follows:
 
     ```csharp
-    public async Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms()
-    {
-        var sql = """
-            SELECT
-                b.BookingID,
-                b.CustomerID,
-                b.HotelID,
-                b.StayBeginDate,
-                b.StayEndDate,
-                b.NumberOfGuests
-            FROM dbo.Booking b
-            WHERE NOT EXISTS
-                (
-                    SELECT 1
-                    FROM dbo.BookingHotelRoom h
-                    WHERE
-                        b.BookingID = h.BookingID
-                );
-            """;
-        await _conn.OpenAsync();
-        using var cmd = new SqlCommand(sql, _conn);
-        using var reader = await cmd.ExecuteReaderAsync();
-        var bookings = new List<Booking>();
-        while (await reader.ReadAsync())
+        public async Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms()
         {
-            bookings.Add(new Booking
+            var sql = """
+                SELECT
+                    b.BookingID,
+                    b.CustomerID,
+                    b.HotelID,
+                    b.StayBeginDate,
+                    b.StayEndDate,
+                    b.NumberOfGuests
+                FROM dbo.Booking b
+                WHERE NOT EXISTS
+                    (
+                        SELECT 1
+                        FROM dbo.BookingHotelRoom h
+                        WHERE
+                            b.BookingID = h.BookingID
+                    );
+                """;
+            using var conn = new SqlConnection(
+                connectionString: Environment.GetEnvironmentVariable("SQLCONNSTR_ContosoSuites")!
+            );
+            conn.Open();
+            using var cmd = new SqlCommand(sql, conn);
+            using var reader = await cmd.ExecuteReaderAsync();
+            var bookings = new List<Booking>();
+            while (await reader.ReadAsync())
             {
-                BookingID = reader.GetInt32(0),
-                CustomerID = reader.GetInt32(1),
-                HotelID = reader.GetInt32(2),
-                StayBeginDate = reader.GetDateTime(3),
-                StayEndDate = reader.GetDateTime(4),
-                NumberOfGuests = reader.GetInt32(5)
-            });
+                bookings.Add(new Booking
+                {
+                    BookingID = reader.GetInt32(0),
+                    CustomerID = reader.GetInt32(1),
+                    HotelID = reader.GetInt32(2),
+                    StayBeginDate = reader.GetDateTime(3),
+                    StayEndDate = reader.GetDateTime(4),
+                    NumberOfGuests = reader.GetInt32(5)
+                });
+            }
+            conn.Close();
+    
+            return bookings;
         }
-        await _conn.CloseAsync();
-
-        return bookings;
-    }
     ```
 
 - The code for the `GetBookingsWithMultipleHotelRooms()` method in the `DatabaseService` class is as follows:
 
     ```csharp
-    public async Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms()
-    {
-        var sql = """
-            SELECT
-                b.BookingID,
-                b.CustomerID,
-                b.HotelID,
-                b.StayBeginDate,
-                b.StayEndDate,
-                b.NumberOfGuests
-            FROM dbo.Booking b
-            WHERE
-                (
-                    SELECT COUNT(1)
-                    FROM dbo.BookingHotelRoom h
-                    WHERE
-                        b.BookingID = h.BookingID
-                ) > 1;
-            """;
-        await _conn.OpenAsync();
-        using var cmd = new SqlCommand(sql, _conn);
-        using var reader = await cmd.ExecuteReaderAsync();
-        var bookings = new List<Booking>();
-        while (await reader.ReadAsync())
+        public async Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms()
         {
-            bookings.Add(new Booking
+            var sql = """
+                SELECT
+                    b.BookingID,
+                    b.CustomerID,
+                    b.HotelID,
+                    b.StayBeginDate,
+                    b.StayEndDate,
+                    b.NumberOfGuests
+                FROM dbo.Booking b
+                WHERE
+                    (
+                        SELECT COUNT(1)
+                        FROM dbo.BookingHotelRoom h
+                        WHERE
+                            b.BookingID = h.BookingID
+                    ) > 1;
+                """;
+            using var conn = new SqlConnection(
+                connectionString: Environment.GetEnvironmentVariable("SQLCONNSTR_ContosoSuites")!
+            );
+            conn.Open();
+            using var cmd = new SqlCommand(sql, conn);
+            using var reader = await cmd.ExecuteReaderAsync();
+            var bookings = new List<Booking>();
+            while (await reader.ReadAsync())
             {
-                BookingID = reader.GetInt32(0),
-                CustomerID = reader.GetInt32(1),
-                HotelID = reader.GetInt32(2),
-                StayBeginDate = reader.GetDateTime(3),
-                StayEndDate = reader.GetDateTime(4),
-                NumberOfGuests = reader.GetInt32(5)
-            });
+                bookings.Add(new Booking
+                {
+                    BookingID = reader.GetInt32(0),
+                    CustomerID = reader.GetInt32(1),
+                    HotelID = reader.GetInt32(2),
+                    StayBeginDate = reader.GetDateTime(3),
+                    StayEndDate = reader.GetDateTime(4),
+                    NumberOfGuests = reader.GetInt32(5)
+                });
+            }
+            conn.Close();
+    
+            return bookings;
         }
-        await _conn.CloseAsync();
-
-        return bookings;
-    }
     ```
 
 - To add the Semantic Kernel NuGet package, you can run the following command from the command line, in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file.
