Updates based on E2T2 runthrough.

--- a/docs/02_implement_function_calls/0202.md
+++ b/docs/02_implement_function_calls/0202.md
@@ -20,6 +20,10 @@ The key tasks are as follows:
 1. Add three local secrets using `dotnet user-secrets`. They should be named `AzureOpenAI:DeploymentName`, `AzureOpenAI:Endpoint`, and `AzureOpenAI:ApiKey`, and these secret names are case-sensitive.
 2. The `DatabaseService` class and `IDatabaseService` interface have three methods associated with them. Contoso Suites would like to add two more methods. One will be called `GetBookingsMissingHotelRooms()` and will return all bookings that do not have associated hotel rooms. The second will be called `GetBookingsWithMultipleHotelRooms()` and will return all bookings with more than one hotel room. Neither method should take an input parameter, and you will not need to add explicit endpoints for these.
 3. Add the Semantic Kernel NuGet package to the Web API project.
+
+    {: .important }
+    > You will need a version of Semantic Kernel that supports Azure.AI.OpenAI version 2. Semantic Kernel 1.17.2 only supports version 1 of the library, so you will need to use 1.18 or later. As of the time of writing, [the latest version of Semantic Kernel](https://www.nuget.org/packages/Microsoft.SemanticKernel/) is 1.18.1-rc so be sure to install that version or later.
+
 4. Tag each of the methods in the `DatabaseService` class as kernel functions and provide a description for each method and input parameter.
 5. The `AppConfig.cs` file contains a simple configuration class. Update the `Program.cs` file to use this configuration class to build out a configuration. Add in any user secrets associated with the (implicit) `Program` class as well as environment variables, and then validate the configuration.
 6. In `Program.cs`, add a singleton of type `Microsoft.SemanticKernel.Kernel`. It should create an `IKernelBuilder` and then add Azure OpenAI chat completion, using the deployment name, endpoint, and API key from your configuration. It should also add as a plugin everything in the `DatabaseService` class.
@@ -177,38 +181,44 @@ The key tasks are as follows:
 - To add the Semantic Kernel NuGet package, you can run the following command from the command line, in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file.
 
     ```powershell
-    dotnet add package Microsoft.SemanticKernel
+    dotnet add package Microsoft.SemanticKernel --version 1.18.1-rc
     ```
 
-- In order to tag a method in the `DatabaseService.cs` file, you will need to include the `Microsoft.SemanticKernel` namespace at the top of the file, along with the other **using** statements.
+    {: .important }
+    > This example specifies a pre-release version of [the Semantic Kernel package](https://www.nuget.org/packages/Microsoft.SemanticKernel/). Once version 1.18 or later has reached a stable state, you will not need to specify the version.
+
+- In order to tag a method in the `DatabaseService.cs` file, you will need to include the `Microsoft.SemanticKernel` and `System.ComponentModel` namespaces at the top of the file, along with the other **using** statements.
 
     ```csharp
     using Microsoft.SemanticKernel;
+    using System.ComponentModel;
     ```
 
     Then, add `[KernelFunction]` and `[Description()]` descriptors to each of the five methods you want to be available for Semantic Kernel to call. For example, the `GetHotels()` method signature would look like:
 
     ```csharp
-    [KernelFunction]
-    [Description("Get all hotels.")]
-    public async Task<IEnumerable<Hotel>> GetHotels()
+        [KernelFunction]
+        [Description("Get all hotels.")]
+        public async Task<IEnumerable<Hotel>> GetHotels()
     ```
 
     For methods with parameters, include as well a `[Description()]` descriptor for each parameter. For example, the `GetBookingsForHotel()` method would look like:
 
     ```csharp
-    [KernelFunction]
-    [Description("Get all bookings for a single hotel.")]
-    public async Task<IEnumerable<Booking>> GetBookingsForHotel(
-        [Description("The ID of the hotel")] int hotelId
-        )
+        [KernelFunction]
+        [Description("Get all bookings for a single hotel.")]
+        public async Task<IEnumerable<Booking>> GetBookingsForHotel(
+            [Description("The ID of the hotel")] int hotelId
+            )
     ```
 
     Make sure to do this for all five methods, including the two you created in Step 2 of this task.
-- The code to create a new configuration item requires that you add a **using** statement to the top of `Program.cs`:
+- Add the Semantic Kernel namespaces we will need to the top of `Program.cs`:
 
     ```csharp
-    using Microsoft.Extensions.Configuration;
+    using Microsoft.SemanticKernel;
+    using Microsoft.SemanticKernel.Connectors.OpenAI;
+    using Microsoft.SemanticKernel.ChatCompletion;
     ```
 
     From there, after creating the **builder** object, add the following code:
