Fixes to E1T1 around deployed resources and bicep

--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -1,19 +1,19 @@
 ---
-title: '1. Deploy Bicep scripts'
+title: '1. Deploy resources via a Bicep script'
 layout: default
 nav_order: 1
 parent: 'Exercise 01: Deploy application resources'
 ---
 
-# Task 01 - Deploy Bicep scripts (20 minutes)
+# Task 01 - Deploy resources via a Bicep script (20 minutes)
 
 ## Introduction
 
-There are several client tools that you will use throughout this lab. These are standard tools for teams working with AI services from both Microsoft and other companies. The first task in this exercise is to prepare a machine--whether a virtual machine or your local computer--to perform these exercises. Then, you will deploy a pair of Bicep scripts.
+There are several client tools that you will use throughout this lab. These are standard tools for teams working with AI services from both Microsoft and other companies. The first task in this exercise is to prepare a machine--whether a virtual machine or your local computer--to perform these exercises. Then, you will deploy Azure resources via a Bicep script.
 
 ## Description
 
-In this task, you will ensure that you have a particular set of tools installed on your own computer. Then, you will prepare a resource group and deploy several resources over two Bicep scripts.
+In this task, you will ensure that you have a particular set of tools installed on your own computer. Then, you will prepare an Azure resource group and deploy several resources to it using a Bicep script.
 
 The key tasks are as follows:
 
@@ -111,6 +111,6 @@ The key tasks are as follows:
 
       ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
 
-  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include, in order of name: an App Service (for API), a Cosmos DB account, an Application Insights instance, an App Service plan, a Log Analytics workspace, an App Service (for dashboard), an Azure OpenAI workspace, a Search service, a Speech service, a container registry, and a storage account.
+  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include: an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
 
 </details>
