Fixes to E2T2 code

--- a/docs/02_implement_function_calls/0202.md
+++ b/docs/02_implement_function_calls/0202.md
@@ -227,11 +227,7 @@ The key tasks are as follows:
     var config = new ConfigurationBuilder()
         .AddUserSecrets<Program>()
         .AddEnvironmentVariables()
-        .Build()
-        .Get<AppConfig>() ??
-        throw new InvalidOperationException("Configuration is not set up correctly. Ensure you have saved your DeploymentName, Endpoint, and ApiKey secrets for Azure OpenAI, either as user secrets or as environment variables.");
-    
-    config.Validate();
+        .Build();
     ```
 
 - The code to create a singleton `Kernel` is as follows, and should be added below the singleton builder for `CosmosClient`.
@@ -241,9 +237,9 @@ The key tasks are as follows:
     {
         IKernelBuilder kernelBuilder = Kernel.CreateBuilder();
         kernelBuilder.AddAzureOpenAIChatCompletion(
-            deploymentName: config.AzureOpenAI!.DeploymentName!,
-            endpoint: config.AzureOpenAI!.Endpoint!,
-            apiKey: config.AzureOpenAI!.ApiKey!
+            deploymentName: builder.Configuration["AzureOpenAI:DeploymentName"]!,
+            endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
+            apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
         );
         kernelBuilder.Plugins.AddFromType<DatabaseService>();
         return kernelBuilder.Build();
