Fixing deployment name environment variable for embedding deployment

--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
@@ -107,7 +107,7 @@ The key tasks are as follows:
         "AzureOpenAIEndpont": "[YOUR_AZURE_OPENAI_ENDPOINT]",
         "AzureOpenAIKey": "[YOUR_AZURE_OPENAI_KEY]",
         "CosmosDBConnectionString": "[YOUR_COSMOS_DB_CONNECTION_STRING]",
-        "DeploymentName": "text-embedding-ada-002"
+        "EmbeddingDeploymentName": "text-embedding-ada-002"
       }
     }
     ```
@@ -125,7 +125,7 @@ The key tasks are as follows:
   
       ![They Azure Cosmos DB account Keys page is displayed, with the PRIMARY CONNECTION STRING copy button highlighted.](../../media/Solution/0302-azure-cosmos-db-keys.png)
 
-  - The `DeploymentName` value is preset, based on the deployment created by the Bicep script. If that value differs in your environment, you will need to update this settings accordingly.
+  - The `EmbeddingDeploymentName` value is preset, based on the deployment created by the Bicep script for the `text-embedding-ada-002` model. If that value differs in your environment, you will need to update this settings accordingly.
 
 - To test the function locally:
   - Open a new terminal windows in Visual Studio Code and change the path to the `src\ContosoSuitesVectorizationFunction` folder.
@@ -171,7 +171,7 @@ The key tasks are as follows:
 
     ![The Upload settings button is highlighted on the deployment completed notification dialog.](../../media/Solution/0302-azure-function-deployment-upload-settings.png)
 
-  - Confirm the settings were uploaded correctly by navigating to the **Settings** menu of your function app in the [Azure portal](https://portal.azure.com/) and selecting **Environment variables**. You should see the `AzureOpenAIEndpoint`, `AzureOpenAIKey`, `CosmosDBConnectionString`, and `DeploymentName` settings, along with other settings added by the Bicep script and deployment process.
+  - Confirm the settings were uploaded correctly by navigating to the **Settings** menu of your function app in the [Azure portal](https://portal.azure.com/) and selecting **Environment variables**. You should see the `AzureOpenAIEndpoint`, `AzureOpenAIKey`, `CosmosDBConnectionString`, and `EmbeddingDeploymentName` settings, along with other settings added by the Bicep script and deployment process.
 
 - To verify the function app was deployed successfully and is working correctly:
   - Open the Log Stream for the Function App by select **Log Stream** under **Monitoring** in the left-hand menu of the Function App page in the [Azure portal](https://portal.azure.com/).
