Updates to exercise 3 search screen and functionality

--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
@@ -18,18 +18,20 @@ In the previous task, you added vector embeddings to property maintenance reques
 The key tasks are as follows:
 
 1. Generate query text embeddings using the `/Vectorize` endpoint of the ContosoSuitesWebAPI.
-2. Provide a method named `ExecuteVectorSearch` in the `VectorizationService` for executing a vector search query against Azure Cosmos DB. The method should accept vectorized query text (named `queryVector`) and a results count (named `count`) and execute a query using the `VectorDistance()` function. It should return a list of `VectorSearchResult` objects. The count should limit the number of results returned. The query executed in Cosmos DB should use the following pattern:
+2. Provide a method named `ExecuteVectorSearch` in the `VectorizationService` for executing a vector search query against Azure Cosmos DB. The method should accept vectorized query text (named `queryVector`), the maximum number of results to return (named `max_results`), and the minimum similarity score (named `minimum_similarity_score`) and execute a query using the `VectorDistance()` function. It should return a list of `VectorSearchResult` objects. The count should limit the number of results returned. The query executed in Cosmos DB should use the following pattern:
 
     ```csharp
     var query = $"SELECT c.hotel_id AS HotelId, c.hotel AS Hotel, c.details AS Details, c.source AS Source, VectorDistance(c.request_vector, [{string.Join(",", queryVector)}]) AS SimilarityScore FROM c";
+    query += $" WHERE VectorDistance(c.request_vector, [{string.Join(",", queryVector)}]) > {minimum_similarity_score}";
     query += $" ORDER BY VectorDistance(c.request_vector, [{string.Join(",", queryVector)}])";
     ```
 
 3. Update the `/VectorSearch` route handler in the `Program.cs` file to call the `ExecuteVectorSearch` method on the `VectorizationService` and return the results.
 4. Implement vector search capabilities to the UI and submit the following queries for maintenance requests:
-   - Set the search query to "Show me rooms where the air conditioning unit is malfunctioning" and enter 6 as the result count.
-   - Search for "Rooms at the Oceanview Inn where there are air conditioning issues" and enter 4 as the number of results to return.
-   - Find for any fire safety requests using the search query, "Are there any requests pertaining to fire safety at any hotels?" Set the number of results to 5.
+    - Set the search query to "Show me rooms where the air conditioning unit is malfunctioning" and enter 10 as the max result count and select a minimum similarity score of 0.80.
+    - Execute the same query a second time, this time setting the minimum similarity score to 0.82 and observe how that setting can be used to reduce the number of irrelevant results.
+    - Search for "Rooms at the Oceanview Inn where there are air conditioning issues" and enter 5 as the maximum number of results to return and set the minimum similarity score slider to 0.85.
+    - Find for any fire safety requests using the search query, "Are there any requests pertaining to fire and safety equipment at any hotels?" Set the max results to 10.
 
 ## Success Criteria
 
@@ -107,7 +109,7 @@ The key tasks are as follows:
   - Open the `Program.cs` file in the `src\ContosoSuitesWebAPI` folder, locate the `app.MapPost("/VectorSearch"...)` route handler, and complete `Exercise 3 Task 3 TODO #3` by writing code to call the `ExecuteVectorSearch` method on the `VectorizationService` and returning the results. The body of the route handler should contain the following or similar code:
 
     ```csharp
-    var results = await vectorizationService.ExecuteVectorSearch(queryVector, count);
+    var results = await vectorizationService.ExecuteVectorSearch(queryVector, max_results, minimum_similarity_score);
     return results;
     ```
 
@@ -121,10 +123,11 @@ The key tasks are as follows:
   - On the Swagger UI page, use the `/Vectorize` endpoint to generate embeddings for the query text "rooms where the air conditioning is not working", as you did previously.
   - Copy the entire response body, include the opening and closing square brackets.
   - Expand the `/VectorSearch` endpoint block and select **Try it out**.
-  - Enter "5" into the `count` parameter box.
+  - Enter "5" into the `max_results` parameter box.
+  - Enter "0.5" into the `minimum_similarity_score` parameter box.
   - Paste the vector embeddings you copied from the output of the `/Vectorize` endpoint into the `Request body` block, and select **Execute**.
 
-    ![The inputs into the count and request body boxes are highlighted in the VectorSearch block, and the Execute button is highlighted.](../../media/Solution/0303-web-api-swagger-vector-search-execute.png)
+    ![The inputs into the max_results, minimum_similarity_score, and request body boxes are highlighted in the VectorSearch block, and the Execute button is highlighted.](../../media/Solution/0303-web-api-swagger-vector-search-execute.png)
 
   - Ensure the response body contains a collection of `VectorSearchResult` objects. The output should look similar to the following:
 
@@ -179,20 +182,20 @@ The key tasks are as follows:
 
       ```python
       if st.button("Submit"):
-      with st.spinner("Performing vector search..."):
-          if query:
-              # Vectorize the query text.
-              # Exercise 3 Task 3 TODO #4: Get the vectorized query text by calling handle_query_vectorization.
-              query_vector = handle_query_vectorization(query)
-              # Perform the vector search.
-              # Exercise 3 Task 3 TODO #5: Get the vector search results by calling handle_vector_search.
-              vector_search_results = handle_vector_search(query_vector, results_count)
-              # Display the results.
-              st.write("## Results")
-              # Exercise 3 Task 3 TODO #6: Display the results as a table.
-              st.table(vector_search_results.json())
-          else:
-              st.warning("Please enter a query.")
+        with st.spinner("Performing vector search..."):
+            if query:
+                # Vectorize the query text.
+                # Exercise 3 Task 3 TODO #4: Get the vectorized query text by calling handle_query_vectorization.
+                query_vector = handle_query_vectorization(query)
+                # Perform the vector search.
+                # Exercise 3 Task 3 TODO #5: Get the vector search results by calling handle_vector_search.
+                vector_search_results = handle_vector_search(query_vector, max_results, minimum_similarity_score)
+                # Display the results.
+                st.write("## Results")
+                # Exercise 3 Task 3 TODO #6: Display the results as a table.
+                st.table(vector_search_results.json())
+            else:
+                st.warning("Please enter a query.")
       ```
 
       {: .note }
@@ -205,8 +208,9 @@ The key tasks are as follows:
     ```
 
 - Navigate to the **Vector Search** page using the left-hand menu in the browser windows that opens, and then submit the following queries for maintenance requests and observe the results:
-  - Set the search query to "Show me rooms where the air conditioning unit is malfunctioning" and enter 6 as the result count.
-  - Search for "Rooms at the Oceanview Inn where there are air conditioning issues" and enter 4 as the number of results to return.
-  - Find for any fire safety requests using the search query, "Are there any requests pertaining to fire safety at any hotels?" Set the number of results to 5.
+  - Set the search query to "Show me rooms where the air conditioning unit is malfunctioning" and enter 10 as the max result count and select a minimum similarity score of 0.80.
+  - Execute the same query a second time, this time setting the minimum similarity score to 0.82 and observe how that setting can be used to reduce the number of irrelevant results.
+  - Search for "Rooms at the Oceanview Inn where there are air conditioning issues" and enter 5 as the maximum number of results to return and set the minimum similarity score slider to 0.85.
+  - Find for any fire safety requests using the search query, "Are there any requests pertaining to fire and safety equipment at any hotels?" Set the max results to 10.
 
 </details>
