--- a/docs/05_enhance_api_with_semantic_kernel/0501.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0501.md
@@ -11,6 +11,36 @@ parent: 'Exercise 05: Enhance the API with Semantic Kernel orchestration'
 
 TODO: Add `AddAzureOpenAITextEmbeddingGeneration(embeddingDeploymentName, endpoint, key)` to the `Kernel` singleton builder call added in Exercise 2 Task 2 (line 224 of the 0202.MD file), so the query text embedding functionality used in exercise 3 can be updated to use Semantic Kernel.
 
+The builder with this new line will initialize and inject a built-in services from the Azure OpenAI Service. This Text Embedding service generates vectors used to perform vector searches against the Cosmos DB `MaintenanceRequests` container you implemented earlier.
+
+- The steps to update the `VectorizationService` to use the built-it vector embeddings capabilities of Semantic Kernel:
+  - Change the primary constructor for the `VectorizationService` to swap out the use of `AzureOpenAIClient` for Semantic Kernel.
+
+    ```csharp
+    public class VectorizationService(Kernel kernel, CosmosClient cosmosCient, IConfiguration configuration) : IVectorizationService
+    ```
+
+  - Replace the `_client` class variable with one that uses Semantic Kernel.
+
+    ```csharp
+    private readonly Kernel _kernel = kernel;
+    ```
+
+  - Remove the `embeddingClient` variable, as it is no longer necessary.
+  - Replace the call to the embedding client for the built-in `GenerateEmbeddingAsync()` method of Semantic Kernel.
+
+    ```csharp
+    #pragma warning disable SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
+        // Generate a vector for the provided text.
+        var embeddings = await _kernel.GetRequiredService<ITextEmbeddingGenerationService>().GenerateEmbeddingAsync(text);
+    #pragma warning restore SKEXP0010
+
+    // Return the vector embeddings.
+    var vector = embeddings.ToArray();
+    ```
+
+  - 
+
 
 
 In the previous exercise, we used the Azure AI Services Speech service's `recognize_once_async()` method to perform basic speech-to-text for an utterance, sending the resulting text to the Azure OpenAI Service. This approach works for short phrases of up to approximately 15 seconds. For longer recordings or dialogues, we will need to use the transcription option built into the Speech service. In this task, we will enable the Contoso Suites call center to transcribe customer calls in an offline fashion.
