--- a/docs/05_enhance_api_with_semantic_kernel/0501.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0501.md
@@ -1,148 +1,140 @@
 ---
-title: '1. Transcribe a recorded support call with the Speech service'
+title: '1. Use the built-in embedding service of Semantic Kernel to perform vector embedding'
 layout: default
 nav_order: 1
 parent: 'Exercise 05: Enhance the API with Semantic Kernel orchestration'
 ---
 
-# Task 01 - Transcribe a recorded support call with the Speech service (30 minutes)
+# Task 01 - Use the built-in embedding service of Semantic Kernel to perform vector embedding (20 minutes)
 
 ## Introduction
 
-TODO: Add `AddAzureOpenAITextEmbeddingGeneration(embeddingDeploymentName, endpoint, key)` to the `Kernel` singleton builder call added in Exercise 2 Task 2 (line 224 of the 0202.MD file), so the query text embedding functionality used in exercise 3 can be updated to use Semantic Kernel.
-
-The builder with this new line will initialize and inject a built-in services from the Azure OpenAI Service. This Text Embedding service generates vectors used to perform vector searches against the Cosmos DB `MaintenanceRequests` container you implemented earlier.
-
-- The steps to update the `VectorizationService` to use the built-it vector embeddings capabilities of Semantic Kernel:
-  - Change the primary constructor for the `VectorizationService` to swap out the use of `AzureOpenAIClient` for Semantic Kernel.
-
-    ```csharp
-    public class VectorizationService(Kernel kernel, CosmosClient cosmosCient, IConfiguration configuration) : IVectorizationService
-    ```
-
-  - Replace the `_client` class variable with one that uses Semantic Kernel.
-
-    ```csharp
-    private readonly Kernel _kernel = kernel;
-    ```
-
-  - Remove the `embeddingClient` variable, as it is no longer necessary.
-  - Replace the call to the embedding client for the built-in `GenerateEmbeddingAsync()` method of Semantic Kernel.
-
-    ```csharp
-    #pragma warning disable SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
-        // Generate a vector for the provided text.
-        var embeddings = await _kernel.GetRequiredService<ITextEmbeddingGenerationService>().GenerateEmbeddingAsync(text);
-    #pragma warning restore SKEXP0010
-
-    // Return the vector embeddings.
-    var vector = embeddings.ToArray();
-    ```
-
-  - 
-
-
-
-In the previous exercise, we used the Azure AI Services Speech service's `recognize_once_async()` method to perform basic speech-to-text for an utterance, sending the resulting text to the Azure OpenAI Service. This approach works for short phrases of up to approximately 15 seconds. For longer recordings or dialogues, we will need to use the transcription option built into the Speech service. In this task, we will enable the Contoso Suites call center to transcribe customer calls in an offline fashion.
+One of the primary features of Semantic Kernel is its ability to add different AI services to the kernel. It includes several built-in services from the Azure Open AI service, which greatly simplified interactions with the Azure OpenAI service from your applications. The Text Embedding Generator service can be used to create vector embeddings, similar to those generated to vectorize search queries when performing vector searches against data in Cosmos DB.
 
 ## Description
 
-In this task, you will make use of your existing Azure AI Services Speech service to work against a new Streamlit application page. You will write code to accept a WAV file upload and then use the `ConversationTranscriber` to perform speech-to-text transcription.
+In exercise 3, you used the Azure OpenAI SDK to create a client capable of generating embeddings. In this task, you will update the `VectorizationService` and its `GetEmbeddings` function to take advantage of the the built-in embedding service offered by Semantic Kernel. You will update the code in that service replace the `AzureOpenAIClient` and its associated calls with a `Kernel` service to perform text embedding.
 
 The key tasks are as follows:
 
-1. In the Streamlit dashboard, open the page `2_Call_Center.py`. Navigate to the `main()` function and into the "Simulate a Call" section. Implement the TODO items to fill out the function call.
-2. Implement the TODO items in the `create_transcription_request()` function to complete this function.
-3. Upload the file `01_Customer_Call.wav` and perform a transcription. You should see the output of the transcription service as a list of strings.
+1. Add the the Text Embedding Generation built-in service to the Kernel builder in the `Program.cs` file. Suppress any warnings using `# pragma` directives.
+2. Remove the `AzureOpenAIClient` singleton service from `Program.cs`, as it will no longer be necessary.
+3. Update the `VectorizationService` primary constructor to remove the `AzureOpenAIClient` and inject the `Kernel` service.
+4. Change the `GetEmbeddings` method to use the built-it vector embeddings capabilities of Semantic Kernel.
+5. Test the updated `VectorizationService` by running the Streamlit dashboard and executing the following maintenance request query on the **Vector Search** page:
+   - Enter a search query of "Show me requests relating to elevator noises" with a max results of 10 and a minimum similarity score of 0.78.
 
 ## Success Criteria
 
-- You have completed the `create_transcription_request()` function.
-- You are able to upload a WAV file and obtain a transcription.
+- You have added the Azure OpenAI Text Embedding Generation service to the Kernel builder in the `Program.cs` file.
+- You have updated the `VectorizationService` and its `GetEmbeddings` method to use the built-in text embedding generation service to create vector embeddings for query text.
+- You have successfully executed a query against the `Vectorize` and `/VectorSearch` endpoints of the web API using the Streamlit dashboard's **Vector Search** page.
 
 ## Learning Resources
 
-- [st.file_uploader](https://docs.streamlit.io/library/api-reference/widgets/st.file_uploader)
-- [st.audio](https://docs.streamlit.io/library/api-reference/media/st.audio)
-- [st.spinner](https://docs.streamlit.io/library/api-reference/status/st.spinner)
-- [st.success](https://docs.streamlit.io/library/api-reference/status/st.success)
-- [Streamlit Session State](https://docs.streamlit.io/library/api-reference/session-state)
-- [How to use the audio input stream](https://learn.microsoft.com/azure/ai-services/speech-service/how-to-use-audio-input-streams)
-- [AudioConfig Class](https://learn.microsoft.com/python/api/azure-cognitiveservices-speech/azure.cognitiveservices.speech.audio.audioconfig?view=azure-python)
-- [AI Services Speech SDK Transcription sample](https://github.com/Azure-Samples/cognitive-services-speech-sdk/blob/master/samples/python/console/transcription_sample.py)
+- [Introduction to Semantic Kernel](https://learn.microsoft.com/semantic-kernel/overview/)
+- [Understanding the kernel](https://learn.microsoft.com/semantic-kernel/concepts/kernel?pivots=programming-language-csharp)
+- [Adding AI services to Semantic Kernel](https://learn.microsoft.com/semantic-kernel/concepts/ai-services/)
+- [OpenAIServiceCollectionExtensions.AddAzureOpenAITextEmbeddingGeneration Method](https://learn.microsoft.com/dotnet/api/microsoft.semantickernel.openaiservicecollectionextensions.addazureopenaitextembeddinggeneration?view=semantic-kernel-dotnet)
+- [Semantic Kernel GitHub repo](https://github.com/microsoft/semantic-kernel)
 
 ## Solution
 
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
 
-- The code to implement the "Simulate a Call" section in the `main()` function is as follows:
+- To update the `Program.cs` file to add the built-in `TextEmbeddingGeneration` service:
+  - Add `AddAzureOpenAITextEmbeddingGeneration(embeddingDeploymentName, endpoint, key)` to the `Kernel` singleton builder call added in Exercise 2 Task 2 (line 224 of the 0202.MD file).
 
-    ```python
-    uploaded_file = st.file_uploader("Upload an audio file", type="wav")
-    if uploaded_file is not None and ('file_transcription' not in st.session_state or st.session_state.file_transcription is False):
-        st.audio(uploaded_file, format='audio/wav')
-        with st.spinner("Transcribing the call..."):
-            all_results = create_transcription_request(uploaded_file, speech_key, speech_region)
-            st.session_state.file_transcription_results = all_results
-            st.session_state.file_transcription = True
-        st.success("Transcription complete!")
-
-    if 'file_transcription_results' in st.session_state:
-        st.write(st.session_state.file_transcription_results)
+    ```csharp
+    kernelBuilder.AddAzureOpenAITextEmbeddingGeneration(
+        deploymentName: builder.Configuration["AzureOpenAI:EmbeddingDeploymentName"]!,
+        endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
+        apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
+    );
     ```
 
-- The `create_transcription_request()` function uses the Azure AI Services Speech service to accept a WAV file as input and perform speech-to-text transcription. It then returns the transcribed text as a list of utterances.
-  - The code for the completed `create_transcription_request()` function is as follows:
+    The code will be underlined by a red squiggly line, indicating an issue.
+
+    The `AddAzureOpenAITextEmbeddingGeneration` feature of Semantic Kernel is flagged for evaluation purposes only at this time, so, you must suppress that issue to be able to use it in the project.
+  - To suppress the issue, hover your mouse cursor over the `AddAzureOpenAITextEmbeddingGeneration` function call and select the dropdown in the tooltip icon that appears.
+    - In the flyout menu, select **Suppress of configure issues -> Suppress SKEXP0010** and then select **in Source**.
+
+        ![In Program.cs, the tip button for the inserted code is highlighted, and Suppress or configure issues items is highlighted in the flyout menu. Suppress SKEXP0010 and in Source are highlighted in submenus.](../../media/Solution/0501-suppress-issue-in-source.png)
+
+    - This will wrap the code in `#pragma warning disable` and `#pragma warning restore` directives and the final code will look like:
+
+        ```csharp
+        #pragma warning disable SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
+            kernelBuilder.AddAzureOpenAITextEmbeddingGeneration(
+                deploymentName: builder.Configuration["AzureOpenAI:EmbeddingDeploymentName"]!,
+                endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
+                apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
+            );
+        #pragma warning restore SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
+        ```
+
+- To remove the `AzureOpenAIClient` singleton service from `Program.cs`:
+  - In `Program.cs`, locate the line that starts with `builder.Services.AddSingleton<AzureOpenAIClient>` and delete that line and the code block it encapsulates.
+
+- To update the `VectorizationService` primary constructor to remove the `AzureOpenAIClient` and inject the `Kernel` service:
+  - Change the primary constructor for the `VectorizationService` to swap out the use of `AzureOpenAIClient` for Semantic Kernel, deleting the injected `AzureOpenAIClient` and replacing it with `Kernel`. The new primary constructor for the class will look like:
+
+    ```csharp
+    public class VectorizationService(Kernel kernel, CosmosClient cosmosCient, IConfiguration configuration)
+    ```
+
+  - Delete the `_client` class variable and create a new one named `_kernel` with a type of `Kernel`.
+
+    ```csharp
+    private readonly Kernel _kernel = kernel;
+    ```
+
+- The steps to update the `VectorizationService` to use the built-it vector embeddings capabilities of Semantic Kernel:
+
+  - In the `GetEmbeddings` function:
+    - Remove the `embeddingClient` variable, as it is no longer necessary.
+    - Replace the call to the embedding client for the built-in `GenerateEmbeddingAsync()` method of Semantic Kernel.
+
+        ```csharp
+        // Generate a vector for the provided text.
+        var embeddings = await _kernel.GetRequiredService<ITextEmbeddingGenerationService>().GenerateEmbeddingAsync(text);
+        ```
+
+    - As you did in the `Program.cs` class, you must supress the issue with the `ITextEmbeddingGenerationService` feature to use it in this class. The final code with look similar to the following:
+
+        ```csharp
+        #pragma warning disable SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
+            // Generate a vector for the provided text.
+            var embeddings = await _kernel.GetRequiredService<ITextEmbeddingGenerationService>().GenerateEmbeddingAsync(text);
+        #pragma warning restore SKEXP0010
+        ```
+
+    - Update the `vector` variable to handle the different type returned by the `GenerateEmbeddingsAsync` method.
+
+        ```csharp
+        // Return the vector embeddings.
+        var vector = embeddings.ToArray();
+        ```
+
+  - Save the `VectorizationService` file.
+
+- To test the updated `VectorizationService`, start the web API and run the Steamlit dashboard.
+  - In Visual Studio Code, open a new terminal window and change the directory to `scr\ContotoSuitesWebAPI`.
+  - At the terminal prompt, enter the following command to run the API locally:
+
+    ```bash
+    dotnet run
+    ```
+
+  - Once the API has started, as indicated by output in the terminal stating `Now listening on: http://localhost:5292`, open a new terminal window in Visual Studio Code, navigating to the `src\ContosoSuitesDashboard` folder, and running the following command to start the Streamlit dashboard:
 
     ```python
-    # Create an instance of a speech config with specified subscription key and service region.
-    speech_config = speechsdk.SpeechConfig(subscription=speech_key, region=speech_region)
-    speech_config.speech_recognition_language=speech_recognition_language
-
-    # Prepare audio settings for the wave stream
-    channels = 1
-    bits_per_sample = 16
-    samples_per_second = 16000
-
-    # Create audio configuration using the push stream
-    wave_format = speechsdk.audio.AudioStreamFormat(samples_per_second, bits_per_sample, channels)
-    stream = speechsdk.audio.PushAudioInputStream(stream_format=wave_format)
-    audio_config = speechsdk.audio.AudioConfig(stream=stream)
-
-    transcriber = speechsdk.transcription.ConversationTranscriber(speech_config, audio_config)
-    all_results = []
-
-    def handle_final_result(evt):
-        all_results.append(evt.result.text)
-
-    done = False
-
-    def stop_cb(evt):
-        print('CLOSING on {}'.format(evt))
-        nonlocal done
-        done= True
-
-    # Subscribe to the events fired by the conversation transcriber
-    transcriber.transcribed.connect(handle_final_result)
-    transcriber.session_started.connect(lambda evt: print('SESSION STARTED: {}'.format(evt)))
-    transcriber.session_stopped.connect(lambda evt: print('SESSION STOPPED {}'.format(evt)))
-    transcriber.canceled.connect(lambda evt: print('CANCELED {}'.format(evt)))
-    # stop continuous transcription on either session stopped or canceled events
-    transcriber.session_stopped.connect(stop_cb)
-    transcriber.canceled.connect(stop_cb)
-
-    transcriber.start_transcribing_async()
-
-    # Read the whole wave files at once and stream it to sdk
-    _, wav_data = wavfile.read(audio_file)
-    stream.write(wav_data.tobytes())
-    stream.close()
-    while not done:
-        time.sleep(.5)
-
-    transcriber.stop_transcribing_async()
-    return all_results
+    python -m streamlit run Index.py
     ```
+
+  - Navigate to the **Vector Search** page in the Streamlit dashboard, and then submit the following query for maintenance requests:
+    - Enter a search query of "Show me requests relating to elevator noises" with a max results of 10 and a minimum similarity score of 0.78.
+  - You should see several results pertaining to elevators and noise, indicating the updates to the API and `VectorizationService` are working correctly.
 
 </details>
