Adding step for updating using statements

--- a/docs/05_enhance_api_with_semantic_kernel/0501.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0501.md
@@ -78,6 +78,15 @@ The key tasks are as follows:
   - In `Program.cs`, locate the line that starts with `builder.Services.AddSingleton<AzureOpenAIClient>` and delete that line and the code block it encapsulates.
 
 - To update the `VectorizationService` primary constructor to remove the `AzureOpenAIClient` and inject the `Kernel` service:
+  - Update the library references in the file:
+    - Remove the `Azure.AI.OpenAI` using statement.
+    - Add the following Semantic Kernel references:
+
+        ```csharp
+        using Microsoft.SemanticKernel;
+        using Microsoft.SemanticKernel.Embeddings;
+        ```
+
   - Change the primary constructor for the `VectorizationService` to swap out the use of `AzureOpenAIClient` for Semantic Kernel, deleting the injected `AzureOpenAIClient` and replacing it with `Kernel`. The new primary constructor for the class will look like:
 
     ```csharp
