Rename sidebar for E3

--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0301.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0301.md
@@ -2,7 +2,7 @@
 title: '1. Enable vector search in Azure Cosmos DB for NoSQL'
 layout: default
 nav_order: 1
-parent: 'Exercise 03: Implement contextual grounding using vector search in Azure Cosmos DB for NoSQL'
+parent: 'Exercise 03: Implement contextual grounding'
 ---
 
 # Task 01 - Enable vector search in Azure Cosmos DB for NoSQL (10 minutes)
