--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
@@ -2,7 +2,7 @@
 title: '2. Create and store vector embeddings'
 layout: default
 nav_order: 2
-parent: 'Exercise 03: Implement contextual grounding using vector search in Azure Cosmos DB for NoSQL'
+parent: 'Exercise 03: Implement contextual grounding'
 ---
 
 # Task 02 - Create and store vector embeddings (45 minutes)
