--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
@@ -2,7 +2,7 @@
 title: '3. Integrate vector search capabilities into the Contoso Suites CIS'
 layout: default
 nav_order: 3
-parent: 'Exercise 03: Implement contextual grounding using vector search in Azure Cosmos DB for NoSQL'
+parent: 'Exercise 03: Implement contextual grounding'
 ---
 
 # Task 03 - Integrate vector search capabilities into the Contoso Suites CIS (30 minutes)
