Updates for exercise 3

--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
@@ -11,7 +11,7 @@ parent: 'Exercise 03: Implement contextual grounding'
 
 Vectors, also known as embeddings or vector embeddings, are mathematical representations of data in a high-dimensional space. In this space, each dimension corresponds to a feature of the data, and tens of thousands of dimensions might be used to represent sophisticated data. A vector's position in this space represents its characteristics. Words, phrases, or entire documents, and images, audio, and other types of data can all be vectorized. An embedding is a special format of data representation that can be easily utilized by machine learning models and algorithms. The embedding is an information dense representation of the semantic meaning of a piece of text. Each embedding is a vector of floating point numbers, such that the distance between two embeddings in the vector space is correlated with semantic similarity between two inputs in the original format. Azure OpenAI provides several models for creating vector embeddings, and for this exercise, you will use the `text-embedding-ada-002` model.
 
-To store the generated embeddings, you will use a vector database. Vector datasbases are designed to store and manage vector embeddings. The vector database you will use is Azure Cosmos DB for NoSQL. It allows you to store vectors alongside traditional schema-free data within your documents, streamlining data management and significantly enhancing the efficiency of vector operations. Keeping all relevant data in a single logical unit simplifies your data architecture, making it easy to understand and manage.
+To store the generated embeddings, you will use a vector database. Vector databases are designed to store and manage vector embeddings. The vector database you will use is Azure Cosmos DB for NoSQL. It allows you to store vectors alongside traditional schema-free data within your documents, streamlining data management and significantly enhancing the efficiency of vector operations. Keeping all relevant data in a single logical unit simplifies your data architecture, making it easy to understand and manage.
 
 ## Description
 
@@ -23,7 +23,7 @@ The key tasks are as follows:
 
 1. Review the Azure Function code in the `CosmosChangeFeedVectorization.cs` file in the `src\ContosoSuitesVectorizationFunction` folder. The function:
    1. Is triggered whenever a document is inserted or updated in the `MaintenanceRequests` container using the Azure Cosmos DB change feed.
-   2. Combines the content in the `hotel` and `details` fields of a maintenance request dnd vectorizes it using a `text-embedding-ada-002` model in Azure OpenAI.
+   2. Combines the content in the `hotel` and `details` fields of a maintenance request and vectorizes it using a `text-embedding-ada-002` model in Azure OpenAI.
    3. Writes generated vectors into the `request_embeddings` fields of the document and updates it in the `MaintenanceRequests` container.
    4. Marks the document as "Vectorized."
 2. Create a `local.settings.json` file in the `src\ContosoSuitesVectorizationFunction` folder and populate it with the settings needed by the function to run the function locally. Hint, the required values can be identified using the calls to `Environment.GetEnvironmentVariable` in the `CosmosChangeFeedVectorization.cs` file, as well as providing the Cosmos DB connection string required by the input and output bindings of the function.
@@ -81,6 +81,28 @@ The key tasks are as follows:
 - [Connect Azure Functions to Azure Cosmos DB using Visual Studio Code](https://learn.microsoft.com/azure/azure-functions/functions-add-output-binding-cosmos-db-vs-code?pivots=programming-language-csharp)
 - [Azure Cosmos DB output binding for Azure Functions](https://learn.microsoft.com/azure/azure-functions/functions-bindings-cosmosdb-v2-output?tabs=python-v2%2Cisolated-process%2Cnodejs-v4%2Cextensionv4&pivots=programming-language-csharp)
 
+## Tips
+
+You may get the following error when trying to deploy the Azure Function:
+
+![An error message that no project root could be found.](../../media/Solution/0302-azure-function-no-root.png)
+
+If you get this error message, you will need to set the default Azure Functions project in the workspace folder. Close and re-open Visual Studio Code and you should see a warning message that you have multiple function projects in the same workspace folder.
+
+![A warning message that there exist multiple function projects in the same workspace folder.](../../media/Solution/0302-azure-function-set-default.png)
+
+After selecting the **Set Default** button, you will receive a prompt to choose a default project subpath. Choose the `src\ContosoSuites\VectorizationFunction` option.
+
+![Choose the VectorizationFunction folder as the default project subpath.](../../media/Solution/0302-azure-function-set-default-2.png)
+
+You may then receive a warning message asking if you wish to initialize this function for optimal use with Visual Studio Code. Select **Yes** to do this.
+
+![Initialize the project for optimal use with Visual Studio Code.](../../media/Solution/0302-azure-function-initialize.png)
+
+You will then receive a warning modal that this operation will overwrite your task.json. Select **Overwrite** to complete this task.
+
+![Overwrite the func: host start task in your tasks.json file.](../../media/Solution/0302-azure-function-overwrite.png)
+
 ## Solution
 
 <details markdown="block">
@@ -104,7 +126,7 @@ The key tasks are as follows:
       "Values": {
         "AzureWebJobsStorage": "",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-        "AzureOpenAIEndpont": "[YOUR_AZURE_OPENAI_ENDPOINT]",
+        "AzureOpenAIEndpoint": "[YOUR_AZURE_OPENAI_ENDPOINT]",
         "AzureOpenAIKey": "[YOUR_AZURE_OPENAI_KEY]",
         "CosmosDBConnectionString": "[YOUR_COSMOS_DB_CONNECTION_STRING]",
         "EmbeddingDeploymentName": "text-embedding-ada-002"
@@ -123,7 +145,7 @@ The key tasks are as follows:
   - Return to your resource group and select the Azure Cosmos DB resource.
     - Under the **Settings** menu, select **Keys**, then show and copy the **PRIMARY CONNECTION STRING** value and paste it as the `CosmosDBConnectionString` value in the `local.settings.json` file.
   
-      ![They Azure Cosmos DB account Keys page is displayed, with the PRIMARY CONNECTION STRING copy button highlighted.](../../media/Solution/0302-azure-cosmos-db-keys.png)
+      ![The Azure Cosmos DB account Keys page is displayed, with the PRIMARY CONNECTION STRING copy button highlighted.](../../media/Solution/0302-azure-cosmos-db-keys.png)
 
   - The `EmbeddingDeploymentName` value is preset, based on the deployment created by the Bicep script for the `text-embedding-ada-002` model. If that value differs in your environment, you will need to update this settings accordingly.
 
