--- a/docs/05_enhance_api_with_semantic_kernel/0501.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0501.md
@@ -90,7 +90,7 @@ The key tasks are as follows:
   - Change the primary constructor for the `VectorizationService` to swap out the use of `AzureOpenAIClient` for Semantic Kernel, deleting the injected `AzureOpenAIClient` and replacing it with `Kernel`. The new primary constructor for the class will look like:
 
     ```csharp
-    public class VectorizationService(Kernel kernel, CosmosClient cosmosCient, IConfiguration configuration)
+    public class VectorizationService(Kernel kernel, CosmosClient cosmosClient, IConfiguration configuration)
     ```
 
   - Delete the `_client` class variable and create a new one named `_kernel` with a type of `Kernel`.
